Fixed Chord Builder z-index

--- a/css/ukeGeeks.music.css
+++ b/css/ukeGeeks.music.css
@@ -301,3 +301,7 @@
   z-index: 6;
 }
 
+#cdBldDlg {
+  z-index: 7;
+}
+
